# matrix_viewer_debug

./: .editorconfig  .gitignore  .vscodeignore  CLAUDE.md  README.md  README_CN.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: update-docs.instructions.md
.github/workflows/: ci.yml
docs/: cpp-windows-codelldb-setup.md  requirements.md  ros2-implementation-plan.md  setup.md
docs/usage/en/: cpp.md  python.md
docs/usage/zh/: cpp.md  python.md
media/: colormaps.js  image-viewer.css  image-viewer.js  plot-viewer.css  plot-viewer.js  pointcloud-viewer.css  pointcloud-viewer.js
src/: cvVariablesProvider.ts  extension.ts  mvVariablesProvider.ts
src/adapters/: IDebugAdapter.ts  ILibProviders.ts  adapterRegistry.ts
src/adapters/cpp/: cppAdapter.ts  cppDebugger.ts  cppTypes.ts  imageProvider.ts  plotProvider.ts  pointCloudProvider.ts
src/adapters/cpp/codelldb/: debugger.ts  imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/codelldb/libs/eigen/: eigenUtils.ts  versionInfo.ts
src/adapters/cpp/codelldb/libs/opencv/: imageProvider.ts  matUtils.ts  versionInfo.ts
src/adapters/cpp/codelldb/libs/pcl/: pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/codelldb/libs/qt/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/codelldb/libs/std/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts
src/adapters/cpp/cppvsdbg/: debugger.ts  imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/cppvsdbg/libs/eigen/: eigenUtils.ts  plotProvider.ts  versionInfo.ts
src/adapters/cpp/cppvsdbg/libs/opencv/: imageProvider.ts  matUtils.ts  versionInfo.ts
src/adapters/cpp/cppvsdbg/libs/pcl/: pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/cppvsdbg/libs/qt/: imageProvider.ts  qtUtils.ts  versionInfo.ts
src/adapters/cpp/cppvsdbg/libs/std/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts
src/adapters/cpp/gdb/: debugger.ts  imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/gdb/libs/: utils.ts
src/adapters/cpp/gdb/libs/eigen/: eigenUtils.ts  imageProvider.ts  versionInfo.ts
src/adapters/cpp/gdb/libs/opencv/: imageProvider.ts  matUtils.ts  versionInfo.ts
src/adapters/cpp/gdb/libs/pcl/: pointCloudProvider.ts  versionInfo.ts
src/adapters/cpp/gdb/libs/qt/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  qtUtils.ts  versionInfo.ts
src/adapters/cpp/gdb/libs/ros2/: imageProvider.ts  pointCloudProvider.ts  ros2Utils.ts
src/adapters/cpp/libs/: utils.ts
src/adapters/cpp/libs/eigen/: eigenUtils.ts  imageProvider.ts  plotProvider.ts
src/adapters/cpp/libs/opencv/: imageProvider.ts  matUtils.ts
src/adapters/cpp/libs/pcl/: pointCloudProvider.ts
src/adapters/cpp/libs/std/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  stdUtils.ts
src/adapters/cpp/shared/: debuggerBase.ts  utils.ts  versionUtils.ts
src/adapters/python/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts  pythonAdapter.ts  pythonDebugger.ts  pythonTypes.ts
src/adapters/python/debugpy/: debugger.ts  imageProvider.ts  plotProvider.ts  pointCloudProvider.ts
src/adapters/python/debugpy/libs/: utils.ts
src/adapters/python/libs/: utils.ts
src/adapters/python/libs/builtins/: plotProvider.ts  pointCloudProvider.ts
src/adapters/python/libs/numpy/: imageProvider.ts  plotProvider.ts  pointCloudProvider.ts
src/adapters/python/libs/open3d/: pointCloudProvider.ts
src/adapters/python/libs/opencv/: imageProvider.ts
src/adapters/python/libs/pil/: imageProvider.ts
src/adapters/python/libs/torch/: imageProvider.ts  plotProvider.ts
src/matImage/: matProvider.ts  matWebview.ts
src/plot/: plotProvider.ts  plotWebview.ts
src/pointCloud/: pointCloudProvider.ts  pointCloudWebview.ts
src/test/: pythonTypes.test.ts
src/utils/: compressionUtils.ts  debugger.ts  envInfo.ts  panelManager.ts  pythonTypes.ts  syncManager.ts
src/viewers/: viewerTypes.ts
test/test_cpp/: .gitignore  CMakeLists.txt  README.md  demo.cpp
test/test_cpp/scripts/bat/: build_llvm.bat  build_msvc.bat
test/test_cpp/scripts/sh/: build_gcc.sh  build_llvm.sh
test/test_python/: README.md  demo.py
test_python/: README.md  demo.py  requirements.txt
(+12 files in other folders)
